# chronotext-gtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-android.sh  build-emscripten.sh  build-ios.sh  build-macosx.sh  build-mxe.sh  build-osx.sh  build-wine.sh  clean.sh  setup.sh
android/prebuilt/gtest/: Android.mk
cmake/: android.cmake  emscripten.cmake  ios-xcode.cmake  ios.cmake  ios.xcode.cmake  mxe.cmake  osx.cmake  run.cmake  wine.cmake
cmake/run/: android.sh.in  ios.sh.in  osx.sh.in
patches/emscripten-1.32.0/: patch.diff
test/: CMakeLists.txt  CTestConfig.cmake  clean.sh  hello_gtest.cpp  run-android.sh  run-emscripten.sh  run-ios.sh  run-macosx.sh  run-osx.sh  run.cmake
test/cmake/: MacOSXBundleInfo.plist.in  ios-xcode.cmake  run.emscripten.sh.in
test/ios/: Info.plist
test/jni/: Android.mk  Application.mk
